--- a/style.css
+++ b/style.css
@@ -1,1 +1,44 @@
 /* style.css */
+
+body {
+  max-width: 900px;
+  margin: auto;
+  padding: 40px 4vw;
+}
+
+h1 {
+  font-size: 100px;
+  font-weight: normal;
+  system-ui: system-ui;
+}
+
+section {
+  background-color: pink;
+  border: ridge;
+}
+
+table {
+  border-spacing: 0;
+  width: 100%;
+}
+
+td {
+  border: 0;
+  border-right: 1px solid lightskyblue;
+  border-bottom: 1px solid lightskyblue;
+}
+
+tr:nth-child(3) td {
+  border-bottom: 0;
+}
+
+td:nth-child(3) {
+  border-right: 0;
+}
+
+label {
+  display: block;
+  height: 0;
+  padding-bottom: 100%;
+  width: 100%;
+}
